<resources>
    <string name="app_name">Lab2.1LoanCalculator</string>
    <string name="vehicle_price">Vehicle Price</string>
    <string name="downpayment">Downpayment</string>
    <string name="repayment">Repayment(Month)</string>
    <string name="interestRate">Interest Rate(%)</string>
    <string name="salary">Salary</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="monthly_payment">Monthly Payment:</string>
    <string name="status">Status:</string>
    <string name="close">Close</string>
    <string name="title_activity_result">Result</string>
</resources>
